# RTC_BID

./: .gitignore  .gitmodules  LICENSE  README.md  cfg_workflow.sh  iter_generate_data.sh  iter_train_expert.sh  playground.ipynb  plot_results.py  pyproject.toml  rtc_workflow.sh
logs-eval-dr/hard_lunar_lander/: results.csv
logs-eval-dr/hard_lunar_lander_r2/: results.csv
logs-eval-dr/hard_lunar_lander_r3/: results.csv
src/: cfg_eval_flow copy.py  cfg_eval_flow.py  cfg_eval_flow_backup.py  cfg_eval_flow_batched.py  cfg_eval_flow_batched2.py  cfg_eval_flow_copy.py  cfg_eval_flow_dynamicenv.py  cfg_eval_flow_single_LLvel.py  cfg_generate_data_dr.py  cfg_train_expert.py  cfg_train_flow.py  eval_flow.py  eval_flow_single.py  eval_flow_single_LLvel.py  eval_flow_single_anoise.py  generate_data.py  generate_data_dr.py  model.py  render_levels.py  rollout_video.py  train_expert.py  train_expert_dr copy.py  train_expert_dr.py  train_flow.py
src/util/: __init__.py  env_dr.py  env_wrappers.py  merge_bc_policies.py
tools/: expert_trajectory_workflow.sh
tools/trajectory/: README.md  plot_kinetix_scene.py  plot_multi_traj.py  plot_single_traj.py  traj_utils.py
worlds/c/: drone (copy).json  drone.json  grasp_elavated.json  insert_key.json  place_can.json  place_can_easy.json  reach_avoid.json  toss_bin.json  whip.json
worlds/l/: car_launch.json  cartpole_thrust.json  catapult.json  catcher_v3.json  chain_lander.json  grasp_easy.json  h17_unicycle.json  hard_lunar_lander.json  hard_lunar_lander_dr.json  hard_lunar_lander_nog.json  trampoline.json
